# flight-circuit-analyzer

./: .gitignore  README.md  一键启动.bat  启动.bat  快速启动.bat  打包.bat
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database_route.py  main.py  middleware.py  responses.py
backend/app/api/: __init__.py  aircraft.py  buildings.py  config.py  elevation.py  helipad.py  runway.py  track.py
backend/app/auth/: dependencies.py  models.py  router.py  security.py
backend/app/core/: __init__.py  building_search.py  calculator.py  coordinate.py  elevation_geovis.py  helipad_calculator.py  validator.py
backend/app/data/: aircrafts.json  flight_camp_airspace_rules.json  obstacle_limitation_surfaces.json  regulations.json  visual_procedure_rules.json
backend/app/models/: __init__.py  aircraft.py  helipad.py  route_schemas.py  runway.py  track.py
backend/app/routers_route10/: analysis_router.py  export_router.py  import_router.py  map_router.py  route_router.py
backend/app/services/: analysis_catalog.py  analysis_service.py  approach_service.py  coordinate_service.py  datasource_service.py  export_service.py  geo_service.py  import_service.py  route_service.py  takeoff_flight_service.py
backend/tests/: test_calculator.py  test_coordinate.py  test_track_api.py  test_validator.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/hooks/: useCoordinateSystem.ts  useTrackCalculation.ts
(+45 files in other folders)
